@@ -8,7 +8,7 @@
 }
 \details{
   \tabular{ll}{ Package: \tab afex\cr Type: \tab Package\cr
-  Version: \tab 0.4-46\cr Date: \tab 2012-09-30\cr Depends:
+  Version: \tab 0.4-48\cr Date: \tab 2012-10-02\cr Depends:
   \tab R (>= 2.14.0), coin, car, lme4, pbkrtest (>= 0.3-2),
   reshape2, stringr\cr Encoding: \tab UTF-8\cr License:
   \tab GPL (>=3)\cr URL: \tab
